syntax = "proto3";
package rill.runtime.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "rill/runtime/v1/catalog.proto";
import "rill/runtime/v1/colors.proto";
import "rill/runtime/v1/connector.proto";
import "rill/runtime/v1/export_format.proto";
import "rill/runtime/v1/expression.proto";
import "rill/runtime/v1/query_console.proto";
import "rill/runtime/v1/resources.proto";
import "rill/runtime/v1/schema.proto";
import "rill/runtime/v1/time_grain.proto";
import "validate/validate.proto";

service RuntimeService {
  // Ping returns information about the runtime
  rpc Ping(PingRequest) returns (PingResponse) {
    option (google.api.http) = {
      get: "/v1/ping"
    };
  }

  // Instances

  // ListInstances lists all the instances currently managed by the runtime
  rpc ListInstances(ListInstancesRequest) returns (ListInstancesResponse) {
    option (google.api.http) = {
      get: "/v1/instances"
    };
  }

  // GetInstance returns information about a specific instance
  rpc GetInstance(GetInstanceRequest) returns (GetInstanceResponse) {
    option (google.api.http) = {
      get: "/v1/instances/{instance_id}"
    };
  }

  // CreateInstance creates a new instance
  rpc CreateInstance(CreateInstanceRequest) returns (CreateInstanceResponse) {
    option (google.api.http) = {
      post: "/v1/instances"
      body: "*"
    };
  }

  // EditInstance edits an existing instance
  rpc EditInstance(EditInstanceRequest) returns (EditInstanceResponse) {
    option (google.api.http) = {
      patch: "/v1/instances/{instance_id}"
      body: "*"
    };
  }

  // DeleteInstance deletes an instance
  rpc DeleteInstance(DeleteInstanceRequest) returns (DeleteInstanceResponse) {
    option (google.api.http) = {
      delete: "/v1/instances/{instance_id}"
    };
  }

  // Resources

  // ListResources lists the resources stored in the catalog
  rpc ListResources(ListResourcesRequest) returns (ListResourcesResponse) {
    option (google.api.http) = {
      get: "/v1/instances/{instance_id}/resources"
    };
  }

  // WatchResources watches for changes to resources stored in the catalog
  rpc WatchResources(WatchResourcesRequest) returns (stream WatchResourcesResponse) {
    option (google.api.http) = {
      get: "/v1/instances/{instance_id}/resources/-/watch"
    };
  }

  // GetResource looks up a specific catalog resource
  rpc GetResource(GetResourceRequest) returns (GetResourceResponse) {
    option (google.api.http) = {
      get: "/v1/instances/{instance_id}/resource"
    };
  }

  // CreateResource creates a resource
  rpc CreateResource(CreateResourceRequest) returns (CreateResourceResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/resources"
      body: "*"
    };
  }

  // DeleteResource deletes a resource
  rpc DeleteResource(DeleteResourceRequest) returns (DeleteResourceResponse) {
    option (google.api.http) = {
      delete: "/v1/instances/{instance_id}/resource"
    };
  }

  // Files

  // ListFiles lists all the files matching a glob in a repo
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse) {
    option (google.api.http) = {
      get: "/v1/instances/{instance_id}/files"
    };
  }

  // WatchFiles streams repo file update events
  rpc WatchFiles(WatchFilesRequest) returns (stream WatchFilesResponse) {
    option (google.api.http) = {
      get: "/v1/instances/{instance_id}/files/watch"
    };
  }

  // GetFile returns the contents of a specific file in a repo
  rpc GetFile(GetFileRequest) returns (GetFileResponse) {
    option (google.api.http) = {
      get: "/v1/instances/{instance_id}/files/-"
    };
  }

  // PutFile creates or updates a file in a repo
  rpc PutFile(PutFileRequest) returns (PutFileResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/files/-"
      body: "*"
    };
  }

  // DeleteFile deletes a file from a repo
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse) {
    option (google.api.http) = {
      delete: "/v1/instances/{instance_id}/files/-"
    };
  }

  // RenameFile renames a file in a repo
  rpc RenameFile(RenameFileRequest) returns (RenameFileResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/files/rename"
      body: "*"
    };
  }

  // Connectors

  // ListConnectors lists all the connectors available to an instance
  rpc ListConnectorDrivers(ListConnectorDriversRequest) returns (ListConnectorDriversResponse) {
    option (google.api.http) = {
      get: "/v1/connector-drivers"
    };
  }

  // AnalyzeConnectors scans all connectors used by the project's sources and models
  rpc AnalyzeConnectors(AnalyzeConnectorsRequest) returns (AnalyzeConnectorsResponse) {
    option (google.api.http) = {
      get: "/v1/instances/{instance_id}/connectors/analyze"
    };
  }

  // ScanConnectors scans the artifacts managed by a specific connector
  rpc ScanConnectors(ScanConnectorsRequest) returns (ScanConnectorsResponse) {
    option (google.api.http) = {
      get: "/v1/instances/{instance_id}/connectors/scan"
    };
  }

  // OLAPListTables lists all tables across all databases/schemas accessible via the OLAP connector
  rpc OLAPListTables(OLAPListTablesRequest) returns (OLAPListTablesResponse) {
    option (google.api.http) = {
      get: "/v1/instances/{instance_id}/olap/tables"
    };
  }

  // OLAPGetTable returns metadata about a single table in the OLAP connector
  rpc OLAPGetTable(OLAPGetTableRequest) returns (OLAPGetTableResponse) {
    option (google.api.http) = {
      get: "/v1/instances/{instance_id}/olap/tables/{table_name}"
    };
  }

  // Reconcile

  // CreateTrigger creates a trigger for a resource
  rpc CreateTrigger(CreateTriggerRequest) returns (CreateTriggerResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/trigger"
      body: "*"
    };
  }

  // AI

  // CompleteAI completes a prompt using an AI model
  rpc CompleteAI(CompleteAIRequest) returns (CompleteAIResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/ai/complete"
      body: "*"
    };
  }

  // GenerateResolver generates a resolver and resolver properties from a prompt
  rpc GenerateResolver(GenerateResolverRequest) returns (GenerateResolverResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/ai/generate-resolver"
      body: "*"
    };
  }

  // GenerateRenderer generates a renderer and renderer properties from a prompt
  rpc GenerateRenderer(GenerateRendererRequest) returns (GenerateRendererResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/ai/generate-renderer"
      body: "*"
    };
  }

  // Query

  // Query runs a SQL query against the instance's OLAP datastore.
  rpc Query(QueryRequest) returns (QueryResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/query"
      body: "*"
    };
  }

  // QueryBatch runs multiple queries against the instance's OLAP datastore.
  rpc QueryBatch(QueryBatchRequest) returns (stream QueryBatchResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/query/batch"
      body: "*"
    };
  }

  // Export exports the result of a query as a file.
  rpc Export(ExportRequest) returns (ExportResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/query/export"
      body: "*"
    };
  }

  // Resolvers

  // Resolve resolves a component using its associated resolver.
  rpc Resolve(ResolveRequest) returns (ResolveResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/resolve"
      body: "*"
    };
  }

  // Logs

  // GetLogs returns recent logs from the runtime
  rpc GetLogs(GetLogsRequest) returns (GetLogsResponse) {
    option (google.api.http) = {
      get: "/v1/instances/{instance_id}/logs"
    };
  }

  // Query Console

  // ListDataExplorerObjects lists data objects (tables, views, sources, models) available
  // in the instance for browsing in the query console's data explorer.
  rpc ListDataExplorerObjects(ListDataExplorerObjectsRequest) returns (ListDataExplorerObjectsResponse) {
    option (google.api.http) = {
      get: "/v1/instances/{instance_id}/query-console/objects"
    };
  }

  // GetDataExplorerSchema returns the schema (column names and types) for a specific data object.
  rpc GetDataExplorerSchema(GetDataExplorerSchemaRequest) returns (GetDataExplorerSchemaResponse) {
    option (google.api.http) = {
      get: "/v1/instances/{instance_id}/query-console/schema"
    };
  }

  // ExecuteQuery executes an ad-hoc SQL query against the instance's data,
  // with guardrail checks (cost estimation, soft/hard limits) and telemetry.
  rpc ExecuteQuery(ExecuteQueryRequest) returns (ExecuteQueryResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/query-console/execute"
      body: "*"
    };
  }

  // CancelQuery cancels a running query console query.
  rpc CancelQuery(CancelQueryRequest) returns (CancelQueryResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/query-console/cancel"
      body: "*"
    };
  }

  // PublishModel publishes the result of a query console SQL query as a new model
  // in the project, triggering reconciliation.
  rpc PublishModel(PublishModelRequest) returns (PublishModelResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/query-console/publish"
      body: "*"
    };
  }
}

// Ping

message PingRequest {
}

message PingResponse {
  // Runtime version
  string version = 1;
  // Runtime server time
  google.protobuf.Timestamp time = 2;
}

// Instances

message ListInstancesRequest {
  uint32 page_size = 1;
  string page_token = 2;
}

message ListInstancesResponse {
  repeated Instance instances = 1;
  string next_page_token = 2;
}

message GetInstanceRequest {
  string instance_id = 1;
  bool sensitive = 2;
}

message GetInstanceResponse {
  Instance instance = 1;
}

message CreateInstanceRequest {
  string instance_id = 1;
  string olap_connector = 4;
  string repo_connector = 5;
  string admin_connector = 6;
  string ai_connector = 11;
  repeated ConnectorV2 connectors = 7;
  map<string, string> variables = 8;
  map<string, string> annotations = 9;
  string embed_catalog = 10;
}

message CreateInstanceResponse {
  Instance instance = 1;
}

message EditInstanceRequest {
  string instance_id = 1;
  optional string olap_connector = 4;
  optional string repo_connector = 5;
  optional string admin_connector = 6;
  optional string ai_connector = 11;
  repeated ConnectorV2 connectors = 7;
  map<string, string> variables = 8;
  map<string, string> annotations = 9;
  optional string embed_catalog = 10;
}

message EditInstanceResponse {
  Instance instance = 1;
}

message DeleteInstanceRequest {
  string instance_id = 1;
  bool drop_db = 2;
}

message DeleteInstanceResponse {
}

// Instance represents a single data project, including its connections and configuration.
message Instance {
  string instance_id = 1;
  string olap_connector = 4;
  string repo_connector = 5;
  string admin_connector = 6;
  string ai_connector = 12;
  repeated ConnectorV2 connectors = 7;
  map<string, string> variables = 8;
  map<string, string> annotations = 9;
  string embed_catalog = 10;
  google.protobuf.Timestamp created_on = 11;
  string project_variables_version = 13;
}

// ConnectorV2 represents a connector specification.
message ConnectorV2 {
  string name = 1;
  string type = 2;
  map<string, string> config = 3;
}

// Resources

message ListResourcesRequest {
  string instance_id = 1;
  optional ResourceName kind = 2;
  optional string path = 3;
}

message ListResourcesResponse {
  repeated Resource resources = 1;
}

message WatchResourcesRequest {
  string instance_id = 1;
  optional ResourceName kind = 2;
  bool replay = 3;
}

message WatchResourcesResponse {
  ResourceEvent event = 1;
}

message GetResourceRequest {
  string instance_id = 1;
  ResourceName name = 2;
}

message GetResourceResponse {
  Resource resource = 1;
}

message CreateResourceRequest {
  string instance_id = 1;
  Resource resource = 2;
}

message CreateResourceResponse {
  Resource resource = 1;
}

message DeleteResourceRequest {
  string instance_id = 1;
  ResourceName name = 2;
}

message DeleteResourceResponse {
}

// Files

message ListFilesRequest {
  string instance_id = 1;
  string glob = 2;
}

message ListFilesResponse {
  repeated DirEntry files = 1;
}

message WatchFilesRequest {
  string instance_id = 1;
  bool replay = 2;
}

message WatchFilesResponse {
  FileEvent event = 1;
}

message GetFileRequest {
  string instance_id = 1;
  string path = 2;
}

message GetFileResponse {
  string blob = 1;
  google.protobuf.Timestamp updated_on = 2;
}

message PutFileRequest {
  string instance_id = 1;
  string path = 2;
  string blob = 3;
  bool create = 4;
  bool create_only = 5;
}

message PutFileResponse {
  string file_path = 1;
}

message DeleteFileRequest {
  string instance_id = 1;
  string path = 2;
  bool force = 3;
}

message DeleteFileResponse {
}

message RenameFileRequest {
  string instance_id = 1;
  string from_path = 2;
  string to_path = 3;
}

message RenameFileResponse {
}

message DirEntry {
  string path = 1;
  bool is_dir = 2;
}

enum FileEvent {
  FILE_EVENT_UNSPECIFIED = 0;
  FILE_EVENT_WRITE = 1;
  FILE_EVENT_DELETE = 2;
}

// Connectors

message ListConnectorDriversRequest {
}

message ListConnectorDriversResponse {
  repeated ConnectorDriver connectors = 1;
}

message AnalyzeConnectorsRequest {
  string instance_id = 1;
}

message AnalyzeConnectorsResponse {
  repeated ConnectorV2 connectors = 1;
}

message ScanConnectorsRequest {
  string instance_id = 1;
  string connector = 2;
}

message ScanConnectorsResponse {
  repeated ScannedConnector connectors = 1;
}

message ScannedConnector {
  string name = 1;
  string type = 2;
  bool has_anonymous_access = 3;
  repeated ScannedTable tables = 4;
}

message ScannedTable {
  string name = 1;
  string schema = 2;
  string database = 3;
}

message OLAPListTablesRequest {
  string instance_id = 1;
  string connector = 2;
}

message OLAPListTablesResponse {
  repeated TableInfo tables = 1;
}

message OLAPGetTableRequest {
  string instance_id = 1;
  string table_name = 2;
  string connector = 3;
}

message OLAPGetTableResponse {
  string schema = 1;
  string database = 2;
  bool is_default_database = 3;
  bool is_default_schema = 4;
  TableInfo table = 5;
}

message TableInfo {
  string name = 1;
  string database = 2;
  string schema = 3;
  bool is_default_database = 4;
  bool is_default_schema = 5;
  repeated ColumnInfo columns = 6;
  bool unsupported_columns = 7;
}

message ColumnInfo {
  string name = 1;
  string type = 2;
  bool nullable = 3;
}

// Reconcile

message CreateTriggerRequest {
  string instance_id = 1;
  // If set, will trigger all models and wait for them to idle.
  bool all_models = 11;
  // If set, will trigger all sources and wait for them to idle.
  bool all_sources = 12;
  // If set, will trigger a reconcile for the resources specified.
  repeated ResourceName resources = 3;
}

message CreateTriggerResponse {
}

// AI

message CompleteAIRequest {
  string instance_id = 1;
  repeated AIMessage messages = 2;
  string system_prompt = 3;
}

message CompleteAIResponse {
  string message = 1;
}

message AIMessage {
  string role = 1;
  string data = 2;
}

message GenerateResolverRequest {
  string instance_id = 1;
  string resolver = 2;
  google.protobuf.Struct resolver_properties = 3;
  string prompt = 4;
}

message GenerateResolverResponse {
  string resolver = 1;
  google.protobuf.Struct resolver_properties = 2;
}

message GenerateRendererRequest {
  string instance_id = 1;
  string renderer = 2;
  google.protobuf.Struct renderer_properties = 3;
  string prompt = 4;
}

message GenerateRendererResponse {
  string renderer = 1;
  google.protobuf.Struct renderer_properties = 2;
}

// Query

message QueryRequest {
  string instance_id = 1;
  string sql = 2;
  repeated google.protobuf.Value args = 3;
  int32 priority = 4;
  int32 limit = 5;
  string connector = 6;
}

message QueryResponse {
  StructType meta = 1;
  repeated google.protobuf.Struct data = 2;
}

message QueryBatchRequest {
  string instance_id = 1;
  repeated Query queries = 2;
}

message Query {
  string sql = 1;
  repeated google.protobuf.Value args = 2;
  int32 priority = 3;
  int32 limit = 4;
  string connector = 5;
}

message QueryBatchResponse {
  int32 index = 1;
  oneof result {
    QueryResult query_result = 2;
    string error = 3;
  }
}

message QueryResult {
  StructType meta = 1;
  repeated google.protobuf.Struct data = 2;
}

message ExportRequest {
  string instance_id = 1;
  int32 limit = 2;
  ExportFormat format = 3;
  oneof request {
    QueryRequest query = 4;
  }
  string bakedQuery = 5;
}

message ExportResponse {
  string download_url_path = 1;
}

// Resolvers

message ResolveRequest {
  string instance_id = 1;
  string resolver = 2;
  google.protobuf.Struct resolver_properties = 3;
  google.protobuf.Struct args = 4;
  map<string, string> claims = 5;
  int32 limit = 6;
  int32 offset = 7;
}

message ResolveResponse {
  StructType schema = 1;
  repeated google.protobuf.Struct data = 2;
  bool cache = 3;
}

// Logs

message GetLogsRequest {
  string instance_id = 1;
  bool ascending = 2;
  int32 limit = 3;
  string level = 4;
}

message GetLogsResponse {
  repeated Log logs = 1;
}

message Log {
  string level = 1;
  google.protobuf.Timestamp time = 2;
  string message = 3;
  string json_payload = 4;
}
